--- a/app/admin/view/home/index.html
+++ b/app/admin/view/home/index.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="__XADMIN__/css/theme6.css">
 
     <script src="__XADMIN__/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="__XADMIN__/js/xadmin.js"></script>
+    <script src="__XADMIN__/js/xadmin.js" type="text/javascript"></script>
 
     <script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
     <script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
     <script src="__COMMON__/js/common.js" charset="utf-8"></script>
-    <script src="__COMMON__/js/ajax.js" charset="utf-8"></script>
+    <script src="__COMMON__/js/ajax_admin.js" charset="utf-8"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
         <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
