--- a/app/front/view/article/detail.html
+++ b/app/front/view/article/detail.html
@@ -1,5 +1,5 @@
 {extend name="public/base" /}
-{block name="title"}新闻详情{/block}
+{block name="title"}文章详情{/block}
 {block name="load"}
 <!-- css -->
 <style>
@@ -34,153 +34,16 @@
         <div id="ctl00_cphMain_Product" class="">
           <div class="product_3">
             <h4 class="text-center">
-              <strong>坐拥万亿规模的欧洲市场，跨境电商卖家该如何挖掘？</strong>
+              <strong id="title"></strong>
             </h4>
             <div class="dashed-line"></div>
             <p class="text-center"></p>
             <div id="owl-demo"></div>
             <p></p>
             <div class="row">
-              <div class="pageContent col-xs-12">
-
-                <!-- 文章内容 -->
-                <p>
-                  <span
-                    style="font-size: 16px">受中美贸易战的影响，持续增加的国际市场波动性，正影响着中国跨境电商企业的生存和发展，不断扩大的征税清单、美国线上下滑的订单量、物流运费蹭蹭上涨……让中国跨境电商企业开始不堪重负,本就拥有很大发展前景的欧洲市场就成了“香饽饽”。据国际邮政公司的统计数据显示，
-                    2018年，欧洲跨境电商市场规模高达950亿欧元，占据欧洲电商销售总额22.8%的份额。其中38%欧洲消费者热衷于跨境购物，他们的包裹多是来自中国。可见，在一定程度上，中国跨境电商卖家正推动欧洲电商市场的发展。但同时，欧洲是多语言、多文明、统一又多元的社会，当地的电商企业都是各自为战，相互之间很难联通。在这样一个市场背景下，欧洲电商市场的开拓无疑是具有挑战性的，如何把握好进军欧洲市场的机会，是跨境卖家需要思考的。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px"><strong>品类：紧跟欧洲市场选品趋势</strong></span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">2019年开拓欧洲市场，卖家首先要关注的是选品。欧洲是多种族多文化融合的地区，这也预示着欧洲地区的消费者有着他们的喜好。比如，意大利人可能不会喜欢Alabama样式的帽子，英国人也不太可能买棒球主题的T恤。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px">以亚马逊为例，从其英国站和德国站部分旺季热销产品，也可以看出些许欧洲市场选品趋势。</span><br />
-                  &nbsp;
-                </p>
-
-                <p style="text-align: center">
-                  <a href="__FRONT__/images/2019081716100583543985.jpg"
-                    target="_blank">
-                    <img src="__FRONT__/images/2019081716100583543985.jpg" style="border: 0" /></a>
-                </p>
-
-                <p>
-                  <br />
-                  <span style="font-size: 16px"><strong>畅销品类：家居</strong></span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">家具类目一直是欧洲站热卖品类前三。去年6月到9月期间，最热卖的六款产品分别是扫地机器人，记忆床垫，LED节能灯泡，L形游戏电脑桌，精油香薰机和厨房电子秤。作为火了好几个季度的产品，扫地机器人在去年6-9月冲到第一名热卖的位置。记忆床垫和香薰机的热卖也充分说明了欧洲消费者对生活品质的和舒适家居的重视。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px"><strong>畅销品类：服装</strong></span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px">飞行员款太阳眼镜是男女皆宜且带起来有款有型的产品，同时这款墨镜有UV
-                    400防晒功能，在夏季热卖几乎是必然。炎热的夏季，女士要穿美美的小裙子，这让塑形内衣和紧身胶带的销量水涨船高。对于男士而言，受欢迎的产品变成了平口袜，腰带和斜挎包。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px"><strong>畅销品类：美妆</strong></span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">美妆类目在夏天迎来小高峰，其中护肤类型如去黑头面膜表现亮眼，拿下热卖第一名的宝座。于此同时，美妆工具也表现不俗，如：吹风机，粉刺针套装，化妆刷套装，指甲油+美甲仪套装和透明收纳盒，说明女孩子喜欢购买套装以得到优惠的价格。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px"><strong>渠道：通过电商平台提升竞争力</strong></span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">把选品挑选好后，这时候需要一个好的渠道来铺设。如何打通渠道？电商平台已经成为各国卖家进军国际市场、接触海外消费者的重要渠道。目前，中国卖家开拓欧洲市场的主流方式有三种：</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px">第一种是如速卖通、亚马逊、eBay、wish、等主流平台；</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">第二种是在海外建设独立网站，在2019年平台竞争日益激烈的大背景下，跨境电商企业自建独立网站和海外仓依然有很大机遇，通过独立销售渠道推广产品成为提升销售效率的重要途径；</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">第三种是跨境电商下一步的重要打法，即目的国本土化运营，如加入海外当地本土平台。对于跨境电商企业而言，利用自身在海外的资源，建立跨境零售运营本土团队，将有助于企业自身在复杂的跨境电商环境中提升竞争力，形成护城河。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">比如，中国卖家要进入欧洲市场，可以考虑入驻德国电商平台real.de。real.de作为德国本土的电商平台，该平台月浏览量超过1900万，全德的线下超市门店也多达280家，拥有丰富的零售经验和名牌优势。背倚类似real.de这样的电商平台，有利于中国卖家了解欧洲消费者的喜好，适应欧洲市场，在欧洲市场中占据有利地位。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px"><strong>服务商：掌握更多欧洲各地服务平台信息</strong></span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">在中国卖家进军欧洲市场的这个过程中，各类服务商同样扮演着重要的角色。而对于卖家来说，跨境电商首先要解决的就是欧洲市场的电商物流和税务问题。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span style="font-size: 16px">针对欧洲物流方面的难题，比利时将会是一大有利跳板。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">从地理位置来看，比利时东与德国接壤，北与荷兰比邻，南与法国交界，东南与卢森堡毗连，西临北海与英国隔海相望。而位于比利时南部的瓦隆大区更是欧洲富裕地区的中心，欧洲绝大多数的市场都在瓦隆大区半径500公里以内，货物可以在几个小时内进入65%的欧盟市场。优越的地理位置、多元化的文化、专业的劳动力和国际公认的基础设施建设，使其成为中欧贸易中转地。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">同时，比利时瓦隆大区投资总署、列日机场和瓦隆大区物流协会三方携手建立了中欧物流园，专门为中国物流和跨境电商企业提供服务。可以为跨境电商卖家提供免费的办公室和邮箱，帮助中国卖家申请比利时政府所提供的各种优惠与补助，在物流方面将对中国跨境电商企业发展起到不小的促进作用。</span><br />
-                  &nbsp;
-                </p>
-
-                <p>
-                  <span
-                    style="font-size: 16px">在VAT方面，比利时政府也推出了一些优惠的政策，包括ET14000增值税许可证——获得许可证的卖家可以享受增值税延期支付的优惠等；针对中国企业提供了一个独有的优惠——90天临时监管仓政策，中国卖家产品整体地进入到比利时海关，存放在位于比利时瓦隆大区的国际货运枢纽机场——列日机场（Liege
-                    Airport）的临时监管仓，卖家有90天的时间去卖产品，整体进入，分小件卖出；0到22欧元的低价值小件产品不需要缴纳VAT和关税，22到150欧元只缴纳VAT：比利时海关还推出了一款无纸化智能报关系统——BE-GATE，系统中包含数据传输接口（SOAP）、国家资源库、BE-GATE核心，以及海关风险分析选择工具等，如果你的企业需在比利时有办事处、或者在比利时有海关报关代理人、在比利时有临时仓库或海关仓库、被授权使用简化报关流程，亦或者有获得综合担保，则可以选择通过比利时BE-GATE进行清关服务。</span>
-                </p>
-
-
-                <div style="text-align: right">
-                  <span style="font-size: 12px"><span style="font-family: 微软雅黑, microsoft yahei, 宋体">（文章来源/雨果网 江琳琳）</span></span>
-                </div>
-                <br /><br />
-                <p></p>
+              <!-- 文章内容 -->
+              <div class="pageContent col-xs-12" id="content">
+                
               </div>
             </div>
           </div>
@@ -190,7 +53,12 @@
   </div>
 </div>
 
-
+<script>
+  let article = ajax_read('/article/info');
+  console.log(article);
+  article.content = HtmlUtil.htmlDecode(article.desc.content);
+  assign(article);
+</script>
 
 <!--中间内容 结束-->
 {/block}
