--- a/app/admin/view/category/update.html
+++ b/app/admin/view/category/update.html
@@ -76,8 +76,8 @@
                         <td width="150" align="right"><strong>显示：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input type="radio" name="show" value="1" title="是">
-                                <input type="radio" name="show" value="0" title="否" checked>
+                                <input type="radio" name="show" value="1" title="是" checked>
+                                <input type="radio" name="show" value="0" title="否">
                             </div>
                             <div class="layui-input-inline">
                                 是否显示在导航
