--- a/app/admin/view/home/welcome.html
+++ b/app/admin/view/home/welcome.html
@@ -1,4 +1,4 @@
-{extend name="public/base" /}
+{extend name="public/base_layui" /}
 {block name="title"}欢迎页面{/block}
 {block name="load"}
 <!-- css -->
