--- a/app/front/view/public/header.html
+++ b/app/front/view/public/header.html
@@ -18,7 +18,8 @@
     <div class="content">
         <div class="header_18">
             <div class="logo">
-                <a id="header1_hlLogo"><img src="__FRONT__/images/33729d63-e64a-4b51-8727-243cc45fdc15.jpg" alt="广东威速易信息科技有限公司 ，跨境电商综合平台-会员登录，威速易一站式跨境供应链服务平台，俄罗斯海外仓、邮政小包、俄罗斯专线、速卖通无忧线上仓" /></a>
+                <a id="header1_hlLogo"><img src="__FRONT__/images/33729d63-e64a-4b51-8727-243cc45fdc15.jpg"
+                        alt="广东威速易信息科技有限公司 ，跨境电商综合平台-会员登录，威速易一站式跨境供应链服务平台，俄罗斯海外仓、邮政小包、俄罗斯专线、速卖通无忧线上仓" /></a>
                 <!-- header | end -->
             </div>
             <div class="right_login">
@@ -59,61 +60,32 @@
                     </div>
                     <div class="collapse navbar-collapse navwrap" id="bs-example-navbar-collapse-9">
                         <ul id="nav" class="nav navbar-nav">
-                            <li>
-                                <a id="shouye" class="hidden-xs" href="/">首 页</a>
-                            </li>
-                            <li>
-                                <a class="hover_1" href="/about" >关于威速易</a>
-                                <ul>
-                                    <li>
-                                        <a href="/about">公司简介</a>
-                                    </li>
-                                    <li>
-                                        <a href="/culture">企业文化</a>
-                                    </li>
-                                    <li>
-                                        <a href="/job">人才招聘</a>
-                                    </li>
-                                    <li>
-                                        <a href="/article">跨境咨询</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a class="hover_1" href="/logistics" target="_blabk">公司产品</a>
-                                <ul>
-                                    <li>
-                                        <a href="/logistics/1">国际快递</a>
-                                    </li>
-                                    <li>
-                                        <a href="/logistics/2">专线渠道</a>
-                                    </li>
-                                    <li>
-                                        <a href="/logistics/3">俄罗斯渠道</a>
-                                    </li>
-                                    <li>
-                                        <a href="/logistics/4">邮政渠道</a>
-                                    </li>
-                                    <li>
-                                        <a href="/logistics/5">亚马逊FBA头程</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a class="hover_1" href="/platform" target="_blabk">跨境平台入驻</a>
-                            </li>
-                            <li>
-                                <a class="hover_1" href="http://ru.gdwse.com/" target="_blabk">俄罗斯海外仓</a>
-                            </li>
-                            <li>
-                                <a class="hover_1" href="http://47.52.128.219/" target="_blabk">美国海外仓</a>
-                            </li>
-                            <li>
-                                <a class="hover_1" href="/contact"  target="_blabk">联系我们</a>
-                            </li>
+
                         </ul>
                     </div>
                 </nav>
+                <script>
+                    // 获取跨境咨询列表
+                    let categoryList = ajax_list('/category/list');
+                    // console.log(categoryList);
+                    var html = '';
+                    $.each(categoryList, function (key, value) {
+                        html += '<li>';
+                        html += '<a class="hover_1" href="' + value.url + '" target="' + value.target + '">' + value.title + '</a>';
+                        // console.log(value.children);
+                        if (!empty(value.children)) {
+                            html += '<ul>';
+                            $.each(value.children, function (k, val) {
+                                html += '<li>';
+                                html += '<a href="' + val.url + '" target="' + val.target + '">' + val.title + '</a>';
+                                html += '</li>';
+                            });
+                            html += '</ul>';
+                        }
+                        html += '</li>';
+                    });
+                    $('#nav').append(html);
+                </script>
             </div>
         </div>
     </div>
