--- a/app/front/view/article/detail.html
+++ b/app/front/view/article/detail.html
@@ -34,7 +34,7 @@
         <div id="ctl00_cphMain_Product" class="">
           <div class="product_3">
             <h4 class="text-center">
-              <strong id="title"></strong>
+              <strong id="assign-title"></strong>
             </h4>
             <div class="dashed-line"></div>
             <p class="text-center"></p>
@@ -42,7 +42,7 @@
             <p></p>
             <div class="row">
               <!-- 文章内容 -->
-              <div class="pageContent col-xs-12" id="content">
+              <div class="pageContent col-xs-12" id="assign-content">
                 
               </div>
             </div>
