--- a/app/front/view/index/index.html
+++ b/app/front/view/index/index.html
@@ -7,7 +7,10 @@
 <!-- 主体内容 -->
 {block name="main"}
 <!-- 中间内容开始 -->
-
+  <script>
+    // 轮播图
+    slides(1);
+  </script>
   <!-- 会员登录 -->
   <div class="gzhl">
     <div class="div_box1" id="style-15">
