--- a/app/front/view/public/base.html
+++ b/app/front/view/public/base.html
@@ -39,6 +39,7 @@
 	<script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
 	<script src="__COMMON__/js/common.js" charset="utf-8"></script>
 	<script src="__COMMON__/js/ajax_api.js" charset="utf-8"></script>
+	<script src="__FRONT__/js/common.js" charset="utf-8"></script>
 
     {block name="load"}{/block}
 </head>
