--- a/app/front/view/article/indexz.html
+++ b/app/front/view/article/indexz.html
@@ -93,7 +93,7 @@
           </script>
         </div>
         <div class="pager text-center">
-          <button type="button" class="layui-btn" onclick="akali()">加载更多</button>
+          <button type="button" class="layui-btn" onclick="renderArticleList()">加载更多</button>
         </div>
       </div>
     </div>
