--- a/app/front/view/news/index.html
+++ b/app/front/view/news/index.html
@@ -6,7 +6,10 @@
 {/block}
 <!-- 主体内容 -->
 {block name="main"}
-
+<script>
+  // 轮播图
+  slides(18);
+</script>
 <!-- 中间内容开始 -->
 
 <div class="container">
