--- a/app/front/view/public/header.html
+++ b/app/front/view/public/header.html
@@ -66,7 +66,7 @@
                 </nav>
                 <script>
                     // 获取跨境咨询列表
-                    let categoryList = ajax_list('/category/list');
+                    let categoryList = ajax_list('/category/get_category_list');
                     // 递归找子级数据
                     categoryList = get_chlidren(categoryList);
                     // console.log(categoryList);
